--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <table cellspacing="20">
 <tr>
-<td><img src="Images/ogabeatz.png" alt="Ogabeatz Picture"></td>
+ <td><img src="Images/ogabeatz.png" alt="ogabeatz Picture"></td>
 <td><h1>OGA BEATZ</h1> 
 <p><em>Music Producer, Film Maker, Artiste</em></p>
 <p><strong>Welcome to my website ❤ </strong></p></td>
