--- a/index.html
+++ b/index.html
@@ -1,59 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sacramento&display=swap" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kwame C.A</title>
+    <title>OGA BEATZ</title>
 </head>
 <body>
-<div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
-    <h1>I'm Kwame.</h1>
-    <h2><p>a programmer.</p></h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-    <img class="mountain" src="images/mountain.png" alt="mountain-image">
-</div>
-<div class="middle-container">
-    <div class="profile">
-      <img class="kwame-photo" src="images/profile.png" alt="kwame-photo">
-      <h2>Hello.</h2>
-      <p class="intro">I started building Websites from 2012 using wordpress and blogger, fast forward to 2022 i started buying themes, scripts and modifying it to my own needs. I then thought why not learn how to code? get full insight on how everything works that's how i started my coding journey. </p>
-    </div>
-    <hr>
-    <div class="skills">
-      <h2>My Skills.</h2>
-      <div class="skill-row">
-        <img class="cloud-network" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExYTMzcnA1NnhtaWUwN3hlNzc2OG9tcjRqY3V5NDJxNDBzeTQyOG94biZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/rEKVSJUyMaXZlTIaEu/giphy.gif" alt="cloud-network">
-        <h3>Design & Development</h3>
-        <p>I create visually engaging, responsive websites and web apps using HTML, CSS, JavaScript, and modern frameworks. My focus is on building user-friendly, high-performance sites that deliver seamless experiences.</p>
-      </div>
-      <div class="skill-row">
-        <img class="phone" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExczR6dTIybXQ4enNhYTZ1Yzkwc3I0MnhtNDlicmJ4YmRkMHJkYXpicSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/r6z2DiggYdvY3lHAbX/giphy.gif" alt="phone-photo">
-        <h3>App Development</h3>
-        <p>I build intuitive, high-performance mobile apps for iOS and Android, focusing on clean code and seamless user experiences.</p>
-      </div>
-    </div>
-    <hr>
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>If you need anything related.</h3>
-      <p class="contact-message">Reach out to me if you love web design and Development</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
-    </div>
-  </div>
-  
-  
-  <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p class="copyright">© Kwame Awuje.</p>
-  </div>
-  
+<table cellspacing="20">
+<tr>
+ <td><img src="Images/ogabeatz.png" alt="ogabeatz Picture"></td>
+<td><h1>OGA BEATZ</h1> 
+<p><em>Music Producer, Film Maker, Artiste</em></p>
+<p><strong>Welcome to my website ❤ </strong></p></td>
+</tr>
+</table>
+<hr>
+<h3>Services you can get from us</h3>
+<ul>
+<li>Beat Making</li>    
+<li>Mixing and Mastering</li>
+</ul>
+<hr>
+<h3>What we have done over the years</h3>
+<table cellspacing="10">
+<thead>
+<tr>
+<th>Dates</th>
+<th>Works</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>2010-2020</td>
+<td>Music Producer Riva Bank Studio</td>  
+</tr>
+<tr>
+<td>2022-2023</td>
+<td>KKE Studios</td>   
+</tr>
+</tbody>
+    <tfoot>
+         
+    </tfoot>
+</table>
+<hr>
+<h3>How we carry out projects</h3>
+<table cellspacing="10">
+<Tr>
+<td>Speed</td>
+<td>⭐⭐⭐⭐⭐</td>
+<td>Quality</td>
+<td>⭐⭐⭐⭐⭐⭐</td>
+</Tr>
+<tr>
+<td>Time</td>
+<td>⭐⭐⭐⭐</td>
+<td>Taste</td>
+<td>⭐⭐⭐⭐⭐⭐</td>
+</tr>
+</table>
+<hr>
+<a href="Music.html">MY MUSIC</a>
+<a href="Contact-me.html">CONTACT ME</a>
+<h3>Licenses</h3>
+<ol>
+    <li>Demo</li>
+    <li>Standard</li>
+    <li>Advance</li>
+</ol>
 </body>
 </html>
